# flowky

./: CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  test.html
.agent_context/: task-01-scaffold.md  task-02-rust-backend.md  task-03-frontend-foundation.md  task-04-core-timer-ui.md  task-05-break-idle.md  task-06-daily-review-tray.md
docs/superpowers/specs/: 2026-06-23-tier3-app-classification-design.md
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  notifications.rs  permissions.rs  scorer.rs  watcher.rs
src/components/: AppNav.tsx  AppRulesSettings.tsx  AvatarFace.tsx  CatMascot.tsx  ContextSwitchSettings.tsx  InfoHint.tsx  NameSettings.tsx  NotificationSettings.tsx  PermissionsPanel.tsx  ResetDataSettings.tsx  SessionItem.tsx  TaskDrawer.tsx  TaskList.tsx  TimeOfDayScene.tsx
src/components/ui/: tooltip.tsx
src/hooks/: useAppWatcher.ts  useIdleWatcher.ts  useSessions.ts  useTasks.ts  useTimer.ts
src/lib/: breakUtils.ts  exportSessions.ts  interruptCategories.ts  mascots.ts  preferences.ts  sessionStats.ts  tauri.ts  theme.ts
src/screens/: ActiveSession.tsx  BreakScreen.tsx  CalendarHeatmap.tsx  DailyReview.tsx  FocusTimer.tsx  Home.tsx  IdleOverlay.tsx  InterruptLog.tsx  Nudge.tsx  Popover.tsx  Settings.tsx  TaskSetup.tsx  Tasks.tsx  WeeklySummary.tsx
src/styles/: app.css  globals.css
src/types/: navigation.ts
