[package]
name = "flowky"
version = "0.1.0"
description = "A clock that bends to your flow"
authors = ["flowky"]
edition = "2021"

[lib]
name = "flowky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
system-idle-time = "1"
active-win-pos-rs = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
